fix : scrollbar to the bottom when new message

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.custom-scrollbars__thumb {
+  overflow:scroll;
+  max-height: 500px;
+}
